# lab-09-producer-consumer

./: .clang-format  CMakeLists.txt
include/: header.hpp  web_crawler_lib.h  web_crawler_lib.hpp
include/web_crawler_lib/: definitions.h  definitions.hpp  parser.h  parser.hpp  url_reader.h  url_reader.hpp  web_crawler.h  web_crawler.hpp
sources/: source.cpp
sources/app/: main.cpp
sources/lib/web_crawler_lib/: parser.cpp  url_reader.cpp  web_crawler.cpp
tests/: test.cpp
tests/web_crawler_lib/: parser_test.cpp  url_reader_test.cpp
